# coop

./: .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_POLICY_UPDATE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  README.md  _typos.toml  coop.toml  coop.yaml  deny.toml  justfile  taplo.toml
.cargo/: config.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
crates/coop-agent/: Cargo.toml
crates/coop-agent/src/: anthropic.rs  anthropic_provider.rs  codex_provider.rs  convert.rs  gemini_images.rs  genai_provider.rs  goose.rs  goose_provider.rs  goose_subprocess.rs  image_prep.rs  key_pool.rs  lib.rs  message_mapping.rs  model_context.rs  model_mapping.rs  models_dev.rs  openai_codex.rs  openai_codex_parser.rs  openai_compatible_images.rs  openai_refresh.rs  provider_spec.rs  request_trace.rs  smoke_test.rs  stream_mapping.rs  sync_http.rs  transport_probe.rs  usage_mapping.rs
crates/coop-agent/tests/: live_openai_auth.rs  openai_compatible_model_names.rs  provider_tracing.rs
crates/coop-channels/: Cargo.toml
crates/coop-channels/src/: lib.rs  signal.rs  signal_tools.rs  terminal.rs
crates/coop-channels/src/signal/: attachment_rewrite_tests.rs  image_ext_tests.rs  inbound.rs  name_resolver.rs  query.rs  target_tests.rs  testkit.rs
crates/coop-core/: Cargo.toml
crates/coop-core/src/: fakes.rs  image_artifacts.rs  images.rs  lib.rs  prompt.rs  tool_args.rs  traits.rs  types.rs  workspace_scope.rs
crates/coop-core/src/tools/: bash.rs  edit_file.rs  list_directory.rs  mod.rs  read_file.rs  truncate.rs  write_file.rs
crates/coop-gateway/: Cargo.toml
crates/coop-gateway/src/: cli.rs  commands.rs  compaction.rs  compaction_store.rs  config.rs  config_check.rs  config_tool.rs  config_watcher.rs  config_write.rs  cron_delivery.rs  cron_runner.rs  cron_timezone.rs  cron_tool.rs  final_reply.rs  gateway.rs  group_history.rs  group_trigger.rs  heartbeat.rs  image_tools.rs  init.rs  init_templates.rs  injection.rs  main.rs  memory_auto_capture.rs  memory_embedding.rs  memory_prompt_index.rs  memory_reconcile.rs  memory_tools.rs  model_capabilities.rs  model_catalog.rs  model_switch.rs  overflow_recovery.rs  provider_factory.rs  provider_registry.rs  reminder.rs  request_metrics.rs  router.rs  sandbox_executor.rs  scheduler.rs  service.rs  (+12 more)
crates/coop-gateway/src/signal_loop/: tests.rs
crates/coop-gateway/src/subagents/: mod.rs  policy.rs  prompt.rs  registry.rs  runtime.rs  tools.rs
crates/coop-gateway/tests/: live_api.rs  memory_auto_capture.rs  memory_file_tools.rs  memory_prompt_index.rs  memory_prompt_index_historical_fixture.rs  memory_reconciliation_e2e.rs  tracing_integration.rs  tracing_test.rs  workspace_scope_trace.rs
crates/coop-gateway/tests/fixtures/: historical_observations.json
crates/coop-ipc/: Cargo.toml
crates/coop-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/coop-memory/: Cargo.toml
crates/coop-memory/src/: lib.rs  traits.rs  types.rs
crates/coop-memory/src/sqlite/: file_query.rs  helpers.rs  maintenance.rs  mod.rs  query.rs  schema.rs  session_search.rs  tests.rs  write_ops.rs
crates/coop-sandbox/: Cargo.toml
crates/coop-sandbox/src/: apple.rs  lib.rs  linux.rs  policy.rs
crates/coop-sandbox/tests/: linux.rs  policy.rs
crates/coop-tui/: Cargo.toml  NOTICE
crates/coop-tui/src/: app.rs  engine.rs  input.rs  lib.rs  theme.rs  ui.rs  utils.rs
crates/coop-tui/src/components/: editor.rs  footer.rs  markdown.rs  mod.rs  spacer.rs  status.rs  text.rs  tool_box.rs
crates/coop-tui/tests/: capture_match.rs
crates/coop-tui/tests/captures/: pi-initial-ansi.txt  pi-initial.txt  pi-response-ansi.txt  pi-response.txt  pi-scrollback.txt  pi-tool-ansi.txt  pi-tool.txt
docs/: TODO.md  architecture.md  compile-times.md  config-safety.md  cron-announce-flow.md  design-principles.md  design.md  genai-provider-migration-prompt.md  goose-agent-design.md  goose-integration.md  hermes-ideas-for-coop.md  long-lived-containers.md  memory-design.md  otel-plan.md  phase1-plan.md  sandbox-analysis.md  signal-delivery-investigation.md  signal-integration-plan.md  system-prompt-design.md  testing-strategy.md  tui-scrollback.md
docs/bugs/: 001-empty-assistant-message.md  002-signal-loop-crash-on-provider-error.md  003-signal-reply-out-of-order.md  004-null-tool-use-input.md  005-openai-codex-built-in-model-mismatch.md  006-signal-direct-message-sync-error-noise.md  007-signal-build-break-after-subagent-session-kind.md  008-signal-link-secondary-device-http-409.md  009-signal-receive-websocket-upgrade-failed.md  010-background-subagent-completion-not-delivered-to-signal.md  SESSION-LOG.md
docs/prompts/: airtight-workspace-isolation.md  auto-detect-inject-images.md  concurrent-multi-user-signal.md  config-safety-impl.md  configurable-prompt-files.md  coop-init.md  cron-delivery.md  cron-direct-inject.md  cron-scheduler.md  dynamic-skill-reload.md  file-observation-linking.md  fix-cron-scheduler-bugs.md  fix-image-handling.md  fix-signal-integration.md  gateway-service-management.md  group-chat-support.md  key-rotation.md  memory-embedding-provider-expansion.md  memory-followup-todos.md  memory-master-execution.md  memory-prompt-bootstrap-index-injection.md  memory-reconciliation-e2e-validation.md  memory-remaining-implementation.md  memory-retention-compression-archive.md  prompt-caching-and-compaction.md  reminder-tool.md  reverse-engineer-pi-tui.md  sandbox-owner-role.md  sandbox.md  session-context-management.md  signal-e2e-trace-loop.md  signal-mock-testing-proposal.md  signal-rich-messages.md  signal-rich-tracing.md  startup-notification.md  subagent-system.md  (+3 more)
prompts/: queue-mid-turn-messages.md
scripts/: find-orphan-files.sh  signal-cli-remote.sh  signal-e2e-workspace-isolation.sh  trace-colorize.jq
supply-chain/: config.toml
tests/: link-recipient-device.sh  listen-recipient-device2.sh  multidevice-delivery-test.sh
tests/signal-delivery/: Cargo.toml  RESULTS.md  prompt-a-enhanced-tracing.md  prompt-b-iptables-simulation.md  run-iptables-test.sh
tests/signal-delivery/src/: main.rs
(+26 files in other folders)
