[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic overrides — these are more noise than signal
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Nursery lints worth enabling
needless_pass_by_value = "warn"
redundant_clone = "warn"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
pulldown-cmark = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
unicode-width = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
qr2term = "0.3"

# ---------------------------------------------------------------------------
# Dev profile: optimize for compile speed, not runtime speed.
# See docs/compile-times.md for rationale.
# ---------------------------------------------------------------------------

[profile.dev]
debug = "line-tables-only"    # faster builds, still get backtraces

[profile.dev.package."*"]
opt-level = 1                 # slight optimization for deps reduces monomorphization bloat

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
