[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
missing_debug_implementations = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic overrides — these are more noise than signal
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Nursery lints worth enabling
derive_partial_eq_without_eq = "warn"
needless_pass_by_value = "warn"
or_fun_call = "warn"
redundant_clone = "warn"
significant_drop_tightening = "warn"
# Restriction lints — cherry-picked for high signal
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
needless_raw_strings = "warn"
print_stderr = "warn"
print_stdout = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
unwrap_used = "warn"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
hex = "0.4"
pulldown-cmark = "0.12"
qr2term = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
unicode-width = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }

# ---------------------------------------------------------------------------
# Dev profile: optimize for compile speed, not runtime speed.
# See docs/compile-times.md for rationale.
# ---------------------------------------------------------------------------

[profile.dev]
debug = "line-tables-only" # faster builds, still get backtraces

[profile.dev.package."*"]
opt-level = 1 # slight optimization for deps reduces monomorphization bloat

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }

[patch."https://github.com/whisperfish/presage"]
presage = { git = "https://github.com/lightclient/presage", branch = "main" }
presage-store-sqlite = { git = "https://github.com/lightclient/presage", branch = "main" }

[patch."https://github.com/whisperfish/libsignal-service-rs"]
libsignal-service = { git = "https://github.com/lightclient/libsignal-service-rs", branch = "main" }
