[package]
edition.workspace = true
license.workspace = true
name = "coop-agent"
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = "1.11.0"
coop-core = { path = "../coop-core" }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
