[package]
edition.workspace = true
license.workspace = true
name = "coop-channels"
version.workspace = true

[lints]
workspace = true

[features]
default = []
signal = ["dep:hex"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
coop-core = { path = "../coop-core" }
hex = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
