[package]
edition.workspace = true
license.workspace = true
name = "coop-channels"
version.workspace = true

[lints]
workspace = true

[features]
default = []
signal = [
    "dep:futures",
    "dep:hex",
    "dep:presage",
    "dep:presage-store-sqlite",
    "dep:serde",
    "dep:serde_json",
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
coop-core = { path = "../coop-core" }
futures = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
presage = { git = "https://github.com/whisperfish/presage", rev = "1b81dfe", optional = true }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", rev = "1b81dfe", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { version = "1", features = ["sync", "time", "macros", "rt", "rt-multi-thread"] }
tracing = { workspace = true }
