[package]
edition.workspace = true
license.workspace = true
name = "coop-core"
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tiktoken-rs = "0.6.0"
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
