[package]
edition.workspace = true
license.workspace = true
name = "coop-core"
version.workspace = true

[lints]
workspace = true

[features]
default = ["tokenizer"]
tokenizer = ["dep:tiktoken-rs"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.21"
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tiktoken-rs = { version = "0.6.0", optional = true }
tokio = { version = "1", features = ["process", "fs", "time", "sync", "macros", "rt"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
