[package]
edition.workspace = true
license.workspace = true
name = "coop-gateway"
version.workspace = true

[lints]
workspace = true

[features]
default = []
signal = ["coop-channels/signal", "dep:qr2term"]

[[bin]]
name = "coop"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
coop-agent = { path = "../coop-agent" }
futures = { workspace = true }
coop-channels = { path = "../coop-channels" }
coop-core = { path = "../coop-core" }
coop-ipc = { path = "../coop-ipc" }
coop-tui = { path = "../coop-tui" }
crossterm = { workspace = true }
qr2term = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
