[package]
edition.workspace = true
license.workspace = true
name = "coop-gateway"
version.workspace = true

[lints]
workspace = true

[features]
default = []
signal = ["coop-channels/signal", "dep:qr2term"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }

[[bin]]
name = "coop"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
arc-swap = "1.8.1"
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
coop-agent = { path = "../coop-agent" }
coop-channels = { path = "../coop-channels" }
coop-core = { path = "../coop-core" }
coop-ipc = { path = "../coop-ipc" }
coop-memory = { version = "0.1.0", path = "../coop-memory" }
coop-tui = { path = "../coop-tui" }
cron = "0.15.0"
crossterm = { workspace = true }
futures = { workspace = true }
qr2term = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
