[package]
edition.workspace = true
license.workspace = true
name = "coop-ipc"
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
coop-core = { path = "../coop-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
