[package]
edition.workspace = true
license.workspace = true
name = "coop-memory"
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
coop-core = { version = "0.1.0", path = "../coop-core" }
hex.workspace = true
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.24.0"
tokio = { workspace = true, features = ["macros", "rt"] }
