[package]
edition.workspace = true
license.workspace = true
name = "coop-sandbox"
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
coop-core = { path = "../coop-core" }
tokio = { version = "1", features = ["process", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
