[package]
edition.workspace = true
license.workspace = true
name = "coop-tui"
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
coop-core = { path = "../coop-core" }
crossterm = { workspace = true }
ratatui = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
