[package]
edition.workspace = true
license = "MIT"
name = "coop-tui"
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
coop-core = { path = "../coop-core" }
crossterm = { workspace = true }
pulldown-cmark = { workspace = true }
serde_json.workspace = true
# coop-tui does not use tokio directly — removed to reduce compile scope
unicode-width = { workspace = true }
