[package]
edition.workspace = true
license = "MIT"
name = "coop-tui"
version.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
crossterm = { workspace = true }
pulldown-cmark = { workspace = true }
serde_json.workspace = true
unicode-width = { workspace = true }
