[package]
edition = "2021"
name = "signal-delivery-test"
version = "0.1.0"

[workspace]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
presage = { git = "https://github.com/whisperfish/presage", rev = "1b81dfe" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", rev = "1b81dfe" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }

[patch."https://github.com/whisperfish/libsignal-service-rs"]
libsignal-service = { path = "../../vendor/libsignal-service-rs" }

[patch."https://github.com/lightclient/libsignal-service-rs"]
libsignal-service = { path = "../../vendor/libsignal-service-rs" }

[patch."https://github.com/whisperfish/presage"]
presage = { path = "../../vendor/presage/presage" }
presage-store-sqlite = { path = "../../vendor/presage/presage-store-sqlite" }
